--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "devDependencies": {
     "cypress": "6.5.0",
-    "cypress-xpath": "1.6.2",
-    "eslint": "^7.20.0",
-    "eslint-plugin-cypress": "2.11.2",
+    "cypress-xpath": "^1.6.2",
+    "eslint": "^7.22.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "ts-loader": "^7.0.0",
-    "typescript": "^4.1.2",
-    "tslint": "^6.1.0"
+    "tslint": "^6.1.0",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@types/node": "^14.14.0"
