--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "happy-cypress-testing",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "End to end testing for happy cypress learning with Beni Dhomi",
-  "homepage": "https://dhomi.nl",
+  "homepage": "https://www.youtube.com/watch?v=_jhSnrH43oQ",
+  "publisher": "http://dhomi.nl",
   "author": "Beni Dhomi",
   "license": "Open Source",
   "main": "src",
   "scripts": {
-    "lint": "npx tsc -p tsconfig.json",
-    "lint:js": "npx eslint cypress --ext js --fix",
+    "test": "npx cypress run",
     "e2e:gui": "npx cypress open run",
     "e2e:headless": "npx cypress run --headless"
   },
@@ -20,13 +20,12 @@
   "devDependencies": {
     "cypress": "6.5.0",
     "cypress-xpath": "^1.6.2",
-    "eslint": "^7.22.0",
-    "eslint-plugin-cypress": "^2.11.2",
     "ts-loader": "^7.0.0",
     "tslint": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "@types/node": "^14.14.0"
-  }
+  },
+  "format": "prettier --write '*_/_.+(js|json|ts)'"
 }
